should work with avifile too some cleanup ( video/png, ... )
Original commit message from CVS:
should work with avifile too
some cleanup ( video/png, ... )

--- a/gst-plugins-good/ext/libpng/Makefile.am
+++ b/gst-plugins-good/ext/libpng/Makefile.am
@@ -7,5 +7,5 @@ libgstpng_la_CFLAGS = $(GST_CFLAGS)
 libgstpng_la_LIBADD = $(GST_LIBS) $(LIBPNG_LIBS)
 libgstpng_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = gstpng.h
+noinst_HEADERS = gstpngenc.h
 
