--- a/gst-plugins-bad/gst/modplug/Makefile.am
+++ b/gst-plugins-bad/gst/modplug/Makefile.am
@@ -4,7 +4,7 @@ plugindir = $(libdir)/gst
 
 plugin_LTLIBRARIES = libgstmodplug.la
 
-libgstmodplug_la_SOURCES = gstmodplug.cc modplug_types.c
+libgstmodplug_la_SOURCES = gstmodplug.cc modplug_types.cc
 libgstmodplug_la_CFLAGS = $(GST_CFLAGS)
 libgstmodplug_la_CXXFLAGS = $(GST_CFLAGS)
 libgstmodplug_la_LIBADD = libmodplug/libmodplug.la -lstdc++
