--- a/gst-plugins-good/ext/mikmod/Makefile.am
+++ b/gst-plugins-good/ext/mikmod/Makefile.am
@@ -2,12 +2,11 @@ plugindir = $(libdir)/gst
 
 plugin_LTLIBRARIES = libgstmikmod.la
 
-libgstmikmod_la_SOURCES = gstmikmod.c drv_gst.c mikmod_reader.c mikmod_types.c
+libgstmikmod_la_SOURCES = gstmikmod.c drv_gst.c mikmod_reader.c 
 libgstmikmod_la_CFLAGS = $(GST_CFLAGS) $(MIKMOD_CFLAGS)
 libgstmikmod_la_LIBADD = $(MIKMOD_LIBS)
 libgstmikmod_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = gstmikmod.h \
-		 mikmod_types.h
+noinst_HEADERS = gstmikmod.h 
 
 EXTRA_DIST = README
