--- a/gst-plugins-base/ext/Makefile.am
+++ b/gst-plugins-base/ext/Makefile.am
@@ -76,6 +76,12 @@ else
 GSM_DIR=
 endif
 
+if USE_FFMPEG
+FFMPEG_DIR=ffmpeg
+else
+FFMPEG_DIR=
+endif
+
 if USE_FLAC
 FLAC_DIR=flac
 else
@@ -140,12 +146,6 @@ if USE_LIBFAME
 LIBFAME_DIR=libfame
 else
 LIBFAME_DIR=
-endif
-
-if USE_LIBPNG
-LIBPNG_DIR=libpng
-else
-LIBPNG_DIR=
 endif
 
 if USE_MAD
@@ -242,7 +242,7 @@ SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
         $(ARTS_DIR) $(ARTSC_DIR) $(AUDIOFILE_DIR) \
 	$(AVIFILE_DIR) $(CDPARANOIA_DIR) \
 	$(DVDREAD_DIR) $(DVDNAV_DIR) $(ESD_DIR) \
-	$(FLAC_DIR) $(GNOMEVFS_DIR) $(GSM_DIR) \
+	$(FFMPEG_DIR) $(FLAC_DIR) $(GNOMEVFS_DIR) $(GSM_DIR) \
 	$(HERMES_DIR) $(HTTP_DIR) $(JACK_DIR) $(JPEG_DIR) \
 	$(LADSPA_DIR) $(LAME_DIR) $(LCS_DIR) $(LIBDV_DIR) $(LIBFAME_DIR) \
 	$(MAD_DIR) $(MIKMOD_DIR) $(MJPEGTOOLS_DIR) $(MPEG2DEC_DIR) \
