- Added first attempt at general caching mechanism (GstTimeCache renamed to GstCache)
Original commit message from CVS:
- Added first attempt at general caching mechanism (GstTimeCache renamed
to GstCache)
- Some more clocking checks and updates (waiting on GST_CLOCK_TIME_NONE
returns immediatly instead of blocking forever)
- Moved clock get/set functions to element class instead of instance.
- Added cache methods on elements.
- Renamed GST_PROPS_BOOL_TYPE to GST_PROPS_BOOLEAN_TYPE to make it more
consistent with gst_props_get/set_boolean and GST_PROPS_BOOLEAN.
- Give short stats about plugins in gst-inspect.

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -56,6 +56,7 @@ libgstreamer_la_SOURCES =		\
 	gstbin.c		\
 	gstbuffer.c		\
 	gstbufferpool-default.c	\
+	gstcache.c		\
 	gstcaps.c		\
 	gstclock.c		\
 	gstcpu.c		\
@@ -83,7 +84,6 @@ libgstreamer_la_SOURCES =		\
 	$(GST_TYPEFIND_SRC)	\
 	gstutils.c		\
 	gstregistry.c		\
-	gsttimecache.c		\
 	$(GST_PARSE_SRC)	\
 	$(GSTARCH_SRCS)		\
 	$(GST_LOADSAVE_SRC)
@@ -103,6 +103,7 @@ gst_headers =			\
 	gstbin.h		\
 	gstbuffer.h		\
 	gstbufferpool-default.h \
+	gstcache.h		\
 	gstcaps.h		\
 	gstclock.h		\
 	gstcpu.h		\
@@ -129,7 +130,6 @@ gst_headers =			\
 	gsttypefind.h		\
 	gstutils.h		\
 	gstregistry.h		\
-	gsttimecache.h		\
 	gstparse.h		\
 	gstxml.h
 
