fix some disting and rpm building issues
Original commit message from CVS:
fix some disting and rpm building issues

--- a/gst-plugins-good/gst/udp/Makefile.am
+++ b/gst-plugins-good/gst/udp/Makefile.am
@@ -7,6 +7,6 @@ libgstudp_la_CFLAGS = $(GST_CFLAGS)
 libgstudp_la_LIBADD =
 libgstudp_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = gstudpsink.h gstudpsrc.h 
+noinst_HEADERS = gstudpsink.h gstudpsrc.h gstudp.h
 
 EXTRA_DIST = README
