--- a/gst-plugins-good/ext/Makefile.am
+++ b/gst-plugins-good/ext/Makefile.am
@@ -244,6 +244,12 @@ else
 XMMS_DIR=
 endif
 
+if USE_LIBPNG
+SNAPSHOT_DIR=snapshot
+else
+SNAPSHOT_DIR=
+endif
+
 SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
         $(ARTS_DIR) $(ARTSC_DIR) $(AUDIOFILE_DIR) \
 	$(AVIFILE_DIR) $(CDPARANOIA_DIR) \
@@ -256,7 +262,7 @@ SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
 	$(OPENQUICKTIME_DIR) $(RAW1394_DIR) $(RTP_DIR) \
 	$(SDL_DIR) $(SHOUT_DIR) $(SIDPLAY_DIR) \
 	$(SMOOTHWAVE_DIR) $(SWFDEC_DIR) $(TARKIN_DIR) \
-	$(VORBIS_DIR) $(XMMS_DIR)
+	$(VORBIS_DIR) $(XMMS_DIR) $(SNAPSHOT_DIR)
 
 DIST_SUBDIRS=\
 	a52dec aalib alsa \
