--- a/gst-plugins-base/tests/old/examples/Makefile.am
+++ b/gst-plugins-base/tests/old/examples/Makefile.am
@@ -11,4 +11,4 @@ GTK_SUBDIRS=
 endif
 
 SUBDIRS=$(GTK_SUBDIRS)
-DIST_SUBDIRS=capsfilter dynparams seeking
+DIST_SUBDIRS=capsfilter dynparams seeking indexing
