commiting Leifs registry to /var/cache patch, works well for me :)
Original commit message from CVS:
commiting Leifs registry to /var/cache patch, works well for me :)

--- a/gstreamer/debian/rules
+++ b/gstreamer/debian/rules
@@ -36,6 +36,8 @@ configure-stamp:
 		--with-html-dir=\$${prefix}/share/doc/gstreamer-doc \
 		--sysconfdir=/etc \
 		--with-configdir=/etc/gstreamer \
+		--localstatedir=/var \
+		--with-cachedir=/var/cache/gstreamer \
 		--disable-plugin-builddir \
 		--disable-tests \
 		--disable-examples \
