--- a/gstreamer/examples/manual/Makefile.am
+++ b/gstreamer/examples/manual/Makefile.am
@@ -4,7 +4,7 @@ else
 GNOME=
 endif
 
-EXAMPLES = dynamic $(GNOME) helloworld helloworld2 queue xml-mp3
+EXAMPLES = dynamic $(GNOME) helloworld helloworld2 queue threads xml-mp3
 noinst_PROGRAMS = $(EXAMPLES)
 
 LDADD = $(GST_LIBS)
@@ -23,5 +23,5 @@ EXTRA_DIST = extract.pl
 # also, it's a bit irritating that right now a change in any xml file
 # triggers a rebuild of all examples
 #%.c:
-dynamic.c gnome.c helloworld.c helloworld2.c queue.c xml-mp3.c: $(top_srcdir)/docs/manual/*.xml
+dynamic.c gnome.c helloworld.c helloworld2.c queue.c threads.c xml-mp3.c: $(top_srcdir)/docs/manual/*.xml
 	$(srcdir)/extract.pl $@ $(top_srcdir)/docs/manual/*.xml
