More forte compiler fixes, added a .h file to store commonly used macros that have to ifdefed out on non-gcc compilers
Original commit message from CVS:
More forte compiler fixes, added a .h file to store commonly used macros
that have to ifdefed out on non-gcc compilers

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -114,6 +114,7 @@ gst_headers =			\
 	gstformat.h		\
 	gstinfo.h		\
 	gstlog.h		\
+	gstmacros.h		\
 	gstmemchunk.h		\
 	gstpad.h		\
 	gstpipeline.h		\
