Added caches dir
Original commit message from CVS:
Added caches dir

--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -466,6 +466,7 @@ include/Makefile
 gst/Makefile
 gst/gstversion.h
 gst/autoplug/Makefile
+gst/caches/Makefile
 gst/elements/Makefile
 gst/parse/Makefile
 gst/schedulers/Makefile
