use AM_CFLAGS dummy NULL init for vars to deal with warnings
Original commit message from CVS:
use AM_CFLAGS
dummy NULL init for vars to deal with warnings

--- a/gstreamer/tests/old/testsuite/threads/Makefile.am
+++ b/gstreamer/tests/old/testsuite/threads/Makefile.am
@@ -8,15 +8,15 @@ check_PROGRAMS = $(testprogs)
 noinst_PROGRAMS = $(testsfailing)
 
 LDADD = $(GST_LIBS) 
-CFLAGS = $(GST_CFLAGS)
+AM_CFLAGS = $(GST_CFLAGS)
 
 thread1_SOURCES = thread.c
-thread1_CFLAGS = -DTESTNUM=1
+thread1_CFLAGS = -DTESTNUM=1 $(AM_CFLAGS)
 thread2_SOURCES = thread.c
-thread2_CFLAGS = -DTESTNUM=2
+thread2_CFLAGS = -DTESTNUM=2 $(AM_CFLAGS)
 thread3_SOURCES = thread.c
-thread3_CFLAGS = -DTESTNUM=3
+thread3_CFLAGS = -DTESTNUM=3 $(AM_CFLAGS)
 thread4_SOURCES = thread.c
-thread4_CFLAGS = -DTESTNUM=4
+thread4_CFLAGS = -DTESTNUM=4 $(AM_CFLAGS)
 thread5_SOURCES = thread.c
-thread5_CFLAGS = -DTESTNUM=5
+thread5_CFLAGS = -DTESTNUM=5 $(AM_CFLAGS)
