--- a/gstreamer/libs/gst/getbits/Makefile.am
+++ b/gstreamer/libs/gst/getbits/Makefile.am
@@ -1,4 +1,4 @@
-librarydir = $(libdir)/gst
+librarydir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 library_LTLIBRARIES = libgstgetbits.la
 
@@ -8,15 +8,14 @@ else
 GSTARCH_SRCS = 
 endif
 
-libgstgetbitsincludedir = $(includedir)/gstreamer-@VERSION@/gst/getbits
+libgstgetbitsincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/getbits
 libgstgetbitsinclude_HEADERS = getbits.h
+noinst_HEADERS = gstgetbits_inl.h
 
 libgstgetbits_la_SOURCES = getbits.c gstgetbits_inl.h gstgetbits_generic.c $(GSTARCH_SRCS)
 EXTRA_libgstgetbits_la_SOURCES = gstgetbits_i386.s
 
 libgstgetbits_la_CFLAGS = $(GST_CFLAGS) -funroll-all-loops -finline-functions -ffast-math
 libgstgetbits_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
-
-noinst_HEADERS = getbits.h gstgetbits_inl.h
 
 # check_PROGRAMS = gbtest
