--- a/gstreamer/tools/Makefile.am
+++ b/gstreamer/tools/Makefile.am
@@ -36,7 +36,7 @@ gst_register_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
 	-DGST_CACHE_DIR=\""$(GST_CACHE_DIR)"\" 
 endif
 
-gst_inspect_LDADD = $(GST_LIBS) ../libs/gst/control/libgstcontrol.la
+gst_inspect_LDADD = $(GST_LIBS) ../libs/gst/control/libgstcontrol-@GST_MAJORMINOR@.la
 gst_inspect_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
 	-DGST_CACHE_DIR=\""$(GST_CACHE_DIR)"\" 
 
