--- a/gstreamer/gstreamer.pc.in
+++ b/gstreamer/gstreamer.pc.in
@@ -1,12 +1,13 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@/gstreamer-@VERSION@
+includedir=@includedir@/gstreamer-@GST_MAJORMINOR@
 toolsdir=${exec_prefix}/bin
+gstcontrol_libs=-lgstcontrol-@GST_MAJORMINOR@
 
 Name: GStreamer
 Description: Streaming-media framework
 Requires: @GST_PKG_DEPS@@LIBXML_PKG@
 Version: @VERSION@
-Libs: -L${libdir} -lgstreamer
+Libs: -L${libdir} -lgstreamer-@GST_MAJORMINOR@
 Cflags: -I${includedir} @GST_PKG_CFLAGS@
